package com.itmo.mrdvd.collection;

public class TicketCollection {

}
