package com.itmo.mrdvd.command;

public class RemoveLastCommand {

}
