package com.itmo.mrdvd.object;

public enum EventType {
   CONCERT,
   BASEBALL,
   OPERA
}
