package com.itmo.mrdvd.object;

public enum TicketType {
   VIP,
   USUAL,
   BUDGETARY,
   CHEAP
}
